--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew downloadAPI build
+      run: ./gradlew build
     - name: Upload jar
       uses: actions/upload-artifact@v1
       with:
